generator/testdata/rpc/errors/too-few-return-args/greeter.remoto.go
package testdata

type Greeter interface {
	Greet(GreetRequest) (GreetResponse, error)
}

type GreetRequest struct {
	Name string
}

type GreetResponse struct {
	Greeting string
}
